# realworld-flask

./: .env  .gitignore  .python-version  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run
alembic/: env.py
alembic/versions/: aaddef142d08_.py
realworld/: app.py  db.py
realworld/api/: app.py
realworld/api/core/: auth.py  db.py  models.py
realworld/api/handlers/: queries.py
realworld/api/models/: articles.py  profiles.py  tags.py  users.py
realworld/api/routes/v1/: articles.py  profiles.py  tags.py  users.py
realworld/api/routes/v1/articles/: handler.py  models.py  routes.py
realworld/api/routes/v1/profiles/: handler.py  models.py  routes.py
realworld/api/routes/v1/users/: handler.py  models.py  routes.py
realworld/tests/: conftest.py
realworld/tests/api/: test_profiles.py  test_users.py
scripts/: Conduit.postman_collection.json  entrypoint.sh  migrate.sh  run-api-tests.sh  truncate-local-tables.sh
tests/: conftest.py  data.py
tests/api/: test_articles.py  test_profiles.py  test_tags.py  test_users.py
